# tcorpus

./: .gitignore  LICENSE  README.md  pyproject.toml
tcorpus/: __init__.py  ner.py  pos.py  tner.py  tsegment.py
